--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "google-auth-library": "^9.4.1",
     "helmet": "^7.1.0",
     "imap": "^0.8.17",
+    "imapflow": "^1.2.6",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
     "mailparser": "^3.6.5",
